# db_project

./: Cargo.toml  README.md  db_code.txt  dbdiagram_code.txt  uml.txt
.VSCodeCounter/2025-02-02_17-54-04/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
src/: auth.rs  db.rs  main.rs
src/models/: city.rs  city_transport.rs  country.rs  hotel.rs  mod.rs  user.rs
src/possibilities/: admin_actions.rs  mod.rs  user_actions.rs
